--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -1,2 +1,75 @@
 # 有痛苦才会有喜悦，才能称之为人类
 
+| # | Title | Status | Comment |
+| - | ----- | ------ | ------- |
+| 0001 | two sum                        | AC
+| 0005 | longest palindromic substring  | AC, dynamic programming                       | HARD
+| 0010 | regular expression match       | AC, Dynamic Programming
+| 0022 | generate parentheses 
+| 0024 | swap nodes in pairs            | AC, linked list
+| 0031 | next permutation               |  
+| 0033 | search in rotated sorted array | WA  
+| 0053 | maximum subarray               | AC, dynamic programming  
+| 0054 | spiral matrix                  | AC
+| 0062 | unique paths                   | AC, dynamic programming
+| 0064 | minimum path sum               | AC, dynamic programming
+| 0070 | climbing stairs                | AC
+| 0088 | merge sorted array             | AC, sorting
+| 0093 | restore ip address             | AC
+| 0096 | unique binary search trees     | AC, dynamic programming
+| 0120 | triangle                       | AC, dynamic programming
+| 0121 | best time to sell stock        | AC
+| 0139 | word break
+| 0145 | binary tree postorder          | AC, binary tree, recursion and iteration
+| 0152 | maximum product subarray       | AC, one pass; <br> AC, dynamic programming;   | BEAUTIFUL
+| 0186 | reverse words in a string ii   | AC, list
+| 0189 | house robber                   | AC, dynamic programming
+| 0200 | number of islands              | AC, dfs, bfs
+| 0201 | bitwise and of number range    | AC, bit operatation
+| 0210 | course schedule ii             | AC, bfs, topological sort
+| 0212 | house robber ii                | AC, dynamic programming, circulation list
+| 0221 | maximum square                 | AC, dynamic programming
+| 0256 | paint hosue                    | AC, dynamic programming, very slow?
+| 0269 | alien dictionary               | AC, datastructure
+| 0276 | paint fence                    | AC, dynamic programming
+| 0283 | move zeros                     | TLE, bubblesort
+| 0297 | serialize and deserialize binary tree  | AC
+| 0303 | range sum query                | AC, dynamic programming                       | TRASH
+| 0309 | best time to buy and sell stocks with cooldown | AC, dynamic programming
+| 0337 | house robber iii               | AC, dfs
+| 0338 | counting bits                  | AC, dynamic programming
+| 0343 | integer break                  | AC, dynamic programming;                      | HARD
+| 0351 | android unlock pattern         | AC, dfs <br> HARD
+| 0357 | count numbers with unique digits   | AC, dynamic programming
+| 0361 | bomb enemy                     | AC, dynamic programming
+| 0365 | water and jug problem          | AC, math; <br> RE, recursive; <br> TLE, bfs
+| 0377 | combination sum iv             | AC, dynamic programming                       | HARD
+| 0392 | is sub sequence                | AC, one pass; <br> TLE, dynamic programming   | LCS
+| 0413 | arithmetic slices              | AC, dynamic programming
+| 0442 | find all duplicates in an array    | AC, list
+| 0486 | predict the winner             | AC, dynamic programming
+| 0494 | target sum                     | AC, recursion with memoization; <br> unsloved, dynamic programming
+| 0516 | longest palindromic subsequence    | TLE, dynamic programming
+| 0633 | sum of square nums             | AC, math
+| 0638 | shopping offers                | AC, recursion with memoization; <br> WA, dynamic programming  |  HARD
+| 0646 | maximum length of pair chain   | AC, greedy, dynamic programming
+| 0647 | palindromic substring          | AC, dynamic programming
+| 0650 | 2 keys keyboard                | AC, dynamic programming
+| 0651 | 4 keys keyboard                    | AC, dynamic programming                   | HARD
+| 0674 | longest continuous increasing subsequence  | AC, one pass
+| 0695 | max area of island             | AC
+| 0712 | minimum ascii delete sum for two strings   | AC, dynamic programming
+| 0714 | best time to buy and sell stock with transaction fee   | AC, dynamic programming
+| 0718 | maximum length of repeated subarray        | AC, dynamic programming, HARD
+| 0740 | delete and earn                | AC, dynamic programming
+| 0746 | min cost climbing stairs       | AC, dynamic programming
+| 0750 | number of corner rectangles    | LTE, brutal                                   | BETTER BRUTAL
+| 0757 | set interserction size at least two        | AC, greedy; <br> UN, follow-up question
+| 0774 | minimize max distance to gas station       | TLE, min heap; <br> TLE, brutal; <br> WA, dynamic programming 1; <br> MLE, dynamic programming 2; <br>  UN, binary search    | HARD
+| 0813 | largest sum of averages        | AC, dynamic programming                       | HARD
+| 0819 | most common word               | AC
+| 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY 
+| 0875 | koko eat bananas               | AC, binary search
+| 0877 | stone game                     | AC, dynamic programming
+| 0904 | fruit into basket              |  UN                                      | IT SUCKS
+| 0931 | minimum falling path           | AC, dynamic programming 
