--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -1,4 +1,4 @@
-# 有痛苦才会有喜悦，才能称之为人类
+# 有痛苦才会有喜悦，有这种感觉才能称之为人类
 
 | # | Title | Status | Comment |
 | - | ----- | ------ | ------- |
@@ -19,6 +19,7 @@
 | 0096 | unique binary search trees     | AC, dynamic programming
 | 0120 | triangle                       | AC, dynamic programming
 | 0121 | best time to sell stock        | AC
+| 0130 | surrounded regions             | WA, dfs 1; <br> AC, dfs 2
 | 0139 | word break
 | 0145 | binary tree postorder          | AC, binary tree, recursion and iteration
 | 0152 | maximum product subarray       | AC, one pass; <br> AC, dynamic programming;   | BEAUTIFUL
@@ -45,6 +46,7 @@
 | 0365 | water and jug problem          | AC, math; <br> RE, recursive; <br> TLE, bfs
 | 0377 | combination sum iv             | AC, dynamic programming                       | HARD
 | 0392 | is sub sequence                | AC, one pass; <br> TLE, dynamic programming   | LCS
+| 0395 | longest substring with <br>at least k repeating characters     | AC, divide and conquer    | HARD
 | 0413 | arithmetic slices              | AC, dynamic programming
 | 0442 | find all duplicates in an array    | AC, list
 | 0486 | predict the winner             | AC, dynamic programming
@@ -55,21 +57,24 @@
 | 0646 | maximum length of pair chain   | AC, greedy, dynamic programming
 | 0647 | palindromic substring          | AC, dynamic programming
 | 0650 | 2 keys keyboard                | AC, dynamic programming
-| 0651 | 4 keys keyboard                    | AC, dynamic programming                   | HARD
+| 0651 | 4 keys keyboard                | AC, dynamic programming                   | HARD
+| 0670 | maximum swap                   | AC, brutal; <br> AC, greedy
 | 0674 | longest continuous increasing subsequence  | AC, one pass
 | 0695 | max area of island             | AC
 | 0712 | minimum ascii delete sum for two strings   | AC, dynamic programming
 | 0714 | best time to buy and sell stock with transaction fee   | AC, dynamic programming
 | 0718 | maximum length of repeated subarray        | AC, dynamic programming, HARD
 | 0740 | delete and earn                | AC, dynamic programming
+| 0742 | closest leaf in a binary tree  | AC, dfs   | Convert tree to graph
 | 0746 | min cost climbing stairs       | AC, dynamic programming
 | 0750 | number of corner rectangles    | LTE, brutal                                   | BETTER BRUTAL
 | 0757 | set interserction size at least two        | AC, greedy; <br> UN, follow-up question
 | 0774 | minimize max distance to gas station       | TLE, min heap; <br> TLE, brutal; <br> WA, dynamic programming 1; <br> MLE, dynamic programming 2; <br>  UN, binary search    | HARD
+| 0785 | is graph bipartite?            | AC, bfs, dfs
 | 0813 | largest sum of averages        | AC, dynamic programming                       | HARD
 | 0819 | most common word               | AC
-| 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY 
+| 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY
 | 0875 | koko eat bananas               | AC, binary search
 | 0877 | stone game                     | AC, dynamic programming
-| 0904 | fruit into basket              |  UN                                      | IT SUCKS
+| 0904 | fruit into basket              | UN                                      | IT SUCKS
 | 0931 | minimum falling path           | AC, dynamic programming 
