--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -30,6 +30,7 @@
 | 0210 | course schedule ii             | AC, bfs, topological sort
 | 0212 | house robber ii                | AC, dynamic programming, circulation list
 | 0221 | maximum square                 | AC, dynamic programming
+| 0245 | shortest word distance         | AC, dict, hashmap
 | 0256 | paint hosue                    | AC, dynamic programming, very slow?
 | 0269 | alien dictionary               | AC, datastructure
 | 0276 | paint fence                    | AC, dynamic programming
@@ -49,9 +50,11 @@
 | 0395 | longest substring with <br>at least k repeating characters     | AC, divide and conquer    | HARD
 | 0413 | arithmetic slices              | AC, dynamic programming
 | 0442 | find all duplicates in an array    | AC, list
+| 0454 | 4 sum                          | AC, dict;                     | Python collection.Counter, BEAUTIFUL
 | 0486 | predict the winner             | AC, dynamic programming
 | 0494 | target sum                     | AC, recursion with memoization; <br> unsloved, dynamic programming
 | 0516 | longest palindromic subsequence    | TLE, dynamic programming
+| 0625 | minimum factorization          | AC, greedy
 | 0633 | sum of square nums             | AC, math
 | 0638 | shopping offers                | AC, recursion with memoization; <br> WA, dynamic programming  |  HARD
 | 0646 | maximum length of pair chain   | AC, greedy, dynamic programming
@@ -72,9 +75,11 @@
 | 0774 | minimize max distance to gas station       | TLE, min heap; <br> TLE, brutal; <br> WA, dynamic programming 1; <br> MLE, dynamic programming 2; <br>  UN, binary search    | HARD
 | 0785 | is graph bipartite?            | AC, bfs, dfs
 | 0813 | largest sum of averages        | AC, dynamic programming                       | HARD
+| 0814 | binary tree pruning            | AC, binary tree
 | 0819 | most common word               | AC
+| 0863 | all nodes distance k in binary tree    | AC, tree and graph                    | 3rd Solution not trivial
 | 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY
 | 0875 | koko eat bananas               | AC, binary search
 | 0877 | stone game                     | AC, dynamic programming
 | 0904 | fruit into basket              | UN                                      | IT SUCKS
-| 0931 | minimum falling path           | AC, dynamic programming 
+| 0931 | minimum falling path           | AC, dynamic programming
