--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -19,6 +19,7 @@
 | 0096 | unique binary search trees     | AC, dynamic programming
 | 0120 | triangle                       | AC, dynamic programming
 | 0121 | best time to sell stock        | AC
+| 0127 | word ladder                    | AC, bfs                                       | REF: 0433
 | 0130 | surrounded regions             | WA, dfs 1; <br> AC, dfs 2
 | 0139 | word break
 | 0145 | binary tree postorder          | AC, binary tree, recursion and iteration
@@ -49,6 +50,7 @@
 | 0392 | is sub sequence                | AC, one pass; <br> TLE, dynamic programming   | LCS
 | 0395 | longest substring with <br>at least k repeating characters     | AC, divide and conquer    | HARD
 | 0413 | arithmetic slices              | AC, dynamic programming
+| 0433 | minimum genetic mutation       | AC, bfs                       | REF: 0127
 | 0442 | find all duplicates in an array    | AC, list
 | 0454 | 4 sum                          | AC, dict;                     | Python collection.Counter, BEAUTIFUL
 | 0486 | predict the winner             | AC, dynamic programming
