--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -49,6 +49,8 @@
 | 0377 | combination sum iv             | AC, dynamic programming                       | HARD
 | 0392 | is sub sequence                | AC, one pass; <br> TLE, dynamic programming   | LCS
 | 0395 | longest substring with <br>at least k repeating characters     | AC, divide and conquer    | HARD
+| 0399 | evaluate division              | AC, graph, dfs                | REVIEW
+| 0402 | remove k digits                | AC, stack                     | REVIEW
 | 0413 | arithmetic slices              | AC, dynamic programming
 | 0433 | minimum genetic mutation       | AC, bfs                       | REF: 0127
 | 0442 | find all duplicates in an array    | AC, list
