--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -30,6 +30,7 @@
 | 0201 | bitwise and of number range    | AC, bit operatation
 | 0210 | course schedule ii             | AC, bfs, topological sort
 | 0212 | house robber ii                | AC, dynamic programming, circulation list
+| 0229 | majority elements ii           | AC, one pass                                  | Moore Voting algo
 | 0221 | maximum square                 | AC, dynamic programming
 | 0245 | shortest word distance         | AC, dict, hashmap
 | 0256 | paint hosue                    | AC, dynamic programming, very slow?
@@ -78,6 +79,7 @@
 | 0757 | set interserction size at least two        | AC, greedy; <br> UN, follow-up question
 | 0774 | minimize max distance to gas station       | TLE, min heap; <br> TLE, brutal; <br> WA, dynamic programming 1; <br> MLE, dynamic programming 2; <br>  UN, binary search    | HARD
 | 0785 | is graph bipartite?            | AC, bfs, dfs
+| 0794 | valid tick tack toe state      | UN        | TRASH
 | 0813 | largest sum of averages        | AC, dynamic programming                       | HARD
 | 0814 | binary tree pruning            | AC, binary tree
 | 0819 | most common word               | AC
