--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -1,14 +1,19 @@
 # 有痛苦才会有喜悦，有这种感觉才能称之为人类
 
+## Content
+
 | # | Title | Status | Comment |
 | - | ----- | ------ | ------- |
 | 0001 | two sum                        | AC
-| 0005 | longest palindromic substring  | AC, dynamic programming                       | HARD
+| 0005 | longest palindromic substring  | AC, dynamic programming                       | 难
 | 0010 | regular expression match       | AC, Dynamic Programming
+| 0015 | 3 sum                          | AC, collections.Counter; <br> two pointers    | 极难 （非常多 edge case）
+| 0016 | 3 sum closest                  | AC, collections.Counter; <br> two pointers    | 极难 +
 | 0022 | generate parentheses 
 | 0024 | swap nodes in pairs            | AC, linked list
 | 0031 | next permutation               |  
 | 0033 | search in rotated sorted array | WA  
+| 0042 | trapping rain water            | AC, divide and conquer; <br> AC, one pass; <br> AC, two pointers  | REVIEW
 | 0053 | maximum subarray               | AC, dynamic programming  
 | 0054 | spiral matrix                  | AC
 | 0062 | unique paths                   | AC, dynamic programming
@@ -48,6 +53,7 @@
 | 0361 | bomb enemy                     | AC, dynamic programming
 | 0365 | water and jug problem          | AC, math; <br> RE, recursive; <br> TLE, bfs
 | 0377 | combination sum iv             | AC, dynamic programming                       | HARD
+| 0380 | insert delete get random O(1)  | AC, list, dict
 | 0392 | is sub sequence                | AC, one pass; <br> TLE, dynamic programming   | LCS
 | 0395 | longest substring with <br>at least k repeating characters     | AC, divide and conquer    | HARD
 | 0399 | evaluate division              | AC, graph, dfs                | REVIEW
@@ -59,6 +65,7 @@
 | 0486 | predict the winner             | AC, dynamic programming
 | 0494 | target sum                     | AC, recursion with memoization; <br> unsloved, dynamic programming
 | 0516 | longest palindromic subsequence    | TLE, dynamic programming
+| 0560 | subarray sum equals k          | AC, counter                   | 精彩！
 | 0625 | minimum factorization          | AC, greedy
 | 0633 | sum of square nums             | AC, math
 | 0638 | shopping offers                | AC, recursion with memoization; <br> WA, dynamic programming  |  HARD
@@ -89,3 +96,8 @@
 | 0877 | stone game                     | AC, dynamic programming
 | 0904 | fruit into basket              | UN                                      | IT SUCKS
 | 0931 | minimum falling path           | AC, dynamic programming
+
+
+
+## Two pointers
+0042 
