--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -19,6 +19,7 @@
 | 0062 | unique paths                   | AC, dynamic programming
 | 0064 | minimum path sum               | AC, dynamic programming
 | 0070 | climbing stairs                | AC
+| 0079 | word search                    | AC, dfs                                       | 陷阱：dfs 分支完成时需要还原状态
 | 0088 | merge sorted array             | AC, sorting
 | 0093 | restore ip address             | AC
 | 0096 | unique binary search trees     | AC, dynamic programming
@@ -34,7 +35,7 @@
 | 0200 | number of islands              | AC, dfs, bfs
 | 0201 | bitwise and of number range    | AC, bit operatation
 | 0210 | course schedule ii             | AC, bfs, topological sort
-| 0212 | house robber ii                | AC, dynamic programming, circulation list
+| 0213 | house robber ii                | AC, dynamic programming, circulation list
 | 0229 | majority elements ii           | AC, one pass                                  | Moore Voting algo
 | 0221 | maximum square                 | AC, dynamic programming
 | 0245 | shortest word distance         | AC, dict, hashmap
@@ -96,8 +97,3 @@
 | 0877 | stone game                     | AC, dynamic programming
 | 0904 | fruit into basket              | UN                                      | IT SUCKS
 | 0931 | minimum falling path           | AC, dynamic programming
-
-
-
-## Two pointers
-0042 
