--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -9,11 +9,12 @@
 | 0010 | regular expression match       | AC, Dynamic Programming
 | 0015 | 3 sum                          | AC, collections.Counter; <br> two pointers    | 极难 （非常多 edge case）
 | 0016 | 3 sum closest                  | AC, collections.Counter; <br> two pointers    | 极难 +
+| 0019 | remove n-th node from end of list                              | AC, recursive; <br> AC, two pointers  | 双指针不一定要对向，还可同向
 | 0022 | generate parentheses 
 | 0024 | swap nodes in pairs            | AC, linked list
 | 0031 | next permutation               |  
 | 0033 | search in rotated sorted array | WA  
-| 0042 | trapping rain water            | AC, divide and conquer; <br> AC, one pass; <br> AC, two pointers  | REVIEW
+| 0042 | trapping rain water            | AC, divide and conquer; <br> AC, one pass; <br> AC, two pointers  | 经典，需要复习
 | 0053 | maximum subarray               | AC, dynamic programming  
 | 0054 | spiral matrix                  | AC
 | 0062 | unique paths                   | AC, dynamic programming
@@ -23,21 +24,25 @@
 | 0088 | merge sorted array             | AC, sorting
 | 0093 | restore ip address             | AC
 | 0096 | unique binary search trees     | AC, dynamic programming
+| 0102 | binary tree level order traversal
+| 0103 | binary tree zigzag level order traversal                       | AC, bfs       | 严格按层 bfs，值得复习
 | 0120 | triangle                       | AC, dynamic programming
 | 0121 | best time to sell stock        | AC
-| 0127 | word ladder                    | AC, bfs                                       | REF: 0433
+| 0127 | word ladder                    | AC, bfs                                       | 参考 0433 基因库
 | 0130 | surrounded regions             | WA, dfs 1; <br> AC, dfs 2
 | 0139 | word break
 | 0145 | binary tree postorder          | AC, binary tree, recursion and iteration
 | 0152 | maximum product subarray       | AC, one pass; <br> AC, dynamic programming;   | BEAUTIFUL
+| 0173 | binary search tree iterator    | AC, BST traverse iteratively                  | 复习二叉树的递推遍历
 | 0186 | reverse words in a string ii   | AC, list
 | 0189 | house robber                   | AC, dynamic programming
 | 0200 | number of islands              | AC, dfs, bfs
 | 0201 | bitwise and of number range    | AC, bit operatation
 | 0210 | course schedule ii             | AC, bfs, topological sort
 | 0213 | house robber ii                | AC, dynamic programming, circulation list
-| 0229 | majority elements ii           | AC, one pass                                  | Moore Voting algo
+| 0229 | majority elements ii           | AC, one pass                                  | 摩尔投票
 | 0221 | maximum square                 | AC, dynamic programming
+| 0236 | lowest comman ancestor of a binary tree                        | AC, recursive; iterative      | 最低公共祖先，复习
 | 0245 | shortest word distance         | AC, dict, hashmap
 | 0256 | paint hosue                    | AC, dynamic programming, very slow?
 | 0269 | alien dictionary               | AC, datastructure
@@ -95,5 +100,10 @@
 | 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY
 | 0875 | koko eat bananas               | AC, binary search
 | 0877 | stone game                     | AC, dynamic programming
-| 0904 | fruit into basket              | UN                                      | IT SUCKS
+| 0904 | fruit into basket              | UN                                            | 双指针？
 | 0931 | minimum falling path           | AC, dynamic programming
+
+
+## 双指针 Two Pointers
+
+* 0019 输入一个链表 ```head``` 和一个数字 ```k```，要求删掉倒数第 k 个节点：领指针 ptr1 领先 ptr2 k 个节点，两个指针同时向后遍历，直到最后一个指针达到 null。双指针不一定要对向而行，亦可同向而行。
