--- a/有痛苦才会有喜悦.md
+++ b/有痛苦才会有喜悦.md
@@ -83,6 +83,7 @@
 | 0674 | longest continuous increasing subsequence  | AC, one pass
 | 0695 | max area of island             | AC
 | 0712 | minimum ascii delete sum for two strings   | AC, dynamic programming
+| 0713 | subarray product less than k   | AC                                            | 双指针
 | 0714 | best time to buy and sell stock with transaction fee   | AC, dynamic programming
 | 0718 | maximum length of repeated subarray        | AC, dynamic programming, HARD
 | 0740 | delete and earn                | AC, dynamic programming
@@ -100,10 +101,11 @@
 | 0873 | length of the longest fibonacci subsequence    | AC, dynamic programming       | TRICKY
 | 0875 | koko eat bananas               | AC, binary search
 | 0877 | stone game                     | AC, dynamic programming
-| 0904 | fruit into basket              | UN                                            | 双指针？
+| 0904 | fruit into basket              | AC, two pointers                              | 双指针经典战例
 | 0931 | minimum falling path           | AC, dynamic programming
-
 
 ## 双指针 Two Pointers
 
 * 0019 输入一个链表 ```head``` 和一个数字 ```k```，要求删掉倒数第 k 个节点：领指针 ptr1 领先 ptr2 k 个节点，两个指针同时向后遍历，直到最后一个指针达到 null。双指针不一定要对向而行，亦可同向而行。
+* 0713 输入一个数列，一个数字 ```k```，输出数列中乘积小于 ```k``` 的子串数量。同向双指针。推进 right_ptr，直到窗口内乘积大于 k。此时开始推进 left_ptr，直到窗口内乘积小于 k。即为一个循环。值得注意的是：每个循环结束后，计数器的自增量都为 right_ptr - left_ptr + 1。因为新产生的字串都需要以 right_ptr 所在数字作为结尾。
+* 0904 输入一个数列，输出一个最长子串的长度，使得该子串最多有两个不同的数字。同向双指针。推进 right_ptr，同时使用一个 counter 记录字串中不同数字的个数。一旦子串中不同数字超过两个，开始推进 left_ptr。
